--- a/ProjectX_Proto1/Themes/MasterTheme.xaml
+++ b/ProjectX_Proto1/Themes/MasterTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:local="clr-namespace:ProjectX_Proto2">
     <!-- SimpleStyles.XAML defines a set of control styles which are simplified starting points for creating your own controls -->
 
     <!-- Brushes : These are used to define the color for background, foreground, selection, enabled etc of all controls
@@ -353,7 +354,7 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type TabItem}" x:Key="DefaultTabItem">
+    <Style TargetType="{x:Type local:DynamicTab}" x:Key="DefaultTabItem">
         <Style.Resources>
             <Style x:Key="CloseableTabItemButtonStyle" TargetType="{x:Type Button}">
                 <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -366,20 +367,20 @@
                     <Setter.Value>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <Grid VerticalAlignment="Top">
-                                <Label x:Name="PATH_Close" Padding="0,0,0,0" Margin="12,0,0,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF05C;" Cursor="Hand"></Label>
-                                <!--<Border SnapsToDevicePixels="true" x:Name="Chrome" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="2" Opacity="0" />-->
-                                <!--<ContentPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" Margin="{TemplateBinding Padding}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" RecognizesAccessKey="True"/>-->
+                                <Label Opacity="1" x:Name="CloseLabel" Padding="0,0,0,0" Margin="12,0,0,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF05C;" Cursor="Hand"/>
                             </Grid>
                             <ControlTemplate.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter TargetName="PATH_Close" Property="Content" Value="&#xF057;"/>
-                                    <Setter TargetName="PATH_Close" Property="Foreground" Value="#FFA5D147"/>
+                                    <Setter TargetName="CloseLabel" Property="Content" Value="&#xF057;"/>
+                                    <Setter TargetName="CloseLabel" Property="Foreground" Value="{DynamicResource TabHighlight}"/>
                                 </Trigger>
                                 <Trigger Property="IsPressed" Value="True">
-                                    <Setter TargetName="PATH_Close" Property="Content" Value="&#xF057;"/>
+                                    <Setter TargetName="CloseLabel" Property="Content" Value="&#xF057;"/>
                                 </Trigger>
                                 <Trigger Property="IsEnabled" Value="false">
                                     <Setter Property="Foreground" Value="#ADADAD"/>
+                                    <Setter TargetName="CloseLabel" Property="Opacity" Value="0"/>
+                                    <Setter TargetName="CloseLabel" Property="Cursor" Value="None"/>
                                 </Trigger>
                             </ControlTemplate.Triggers>
                         </ControlTemplate>
@@ -389,15 +390,16 @@
         </Style.Resources>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TabItem}">
-                    <Border Padding="4,5,6,0" Name="Border" Margin="1,2,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"  Background="{DynamicResource WindowAccentBrush}" BorderBrush="{DynamicResource ProfileHighlight}" BorderThickness="0,4,0,0">
+                <ControlTemplate TargetType="{x:Type local:DynamicTab}">
+                    <Border Padding="4,5,6,0" Name="Border" Margin="1,2,0,0" VerticalAlignment="Center" HorizontalAlignment="Left"  Background="{DynamicResource WindowAccentBrush}" BorderBrush="{DynamicResource ProfileHighlight}" BorderThickness="1,4,0,0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto"/>
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <TextBlock Grid.Column="0" x:Name="ContentSite" Margin="2,-4,0,0" Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path= Header}" Foreground="{DynamicResource Header1Brush}"></TextBlock>
-                            <Button Opacity="0" x:Name="CloseButton" Grid.Column="1" Style="{StaticResource CloseableTabItemButtonStyle}" Margin="2,-1,0,0" VerticalContentAlignment="Top">
+                            <Button x:Name="PART_Close" Grid.Column="1" Style="{StaticResource CloseableTabItemButtonStyle}" Margin="2,-1,0,0" VerticalContentAlignment="Top" IsEnabled="False">
+                                
                             </Button>
                         </Grid>
                     </Border>
@@ -407,7 +409,7 @@
                             <Setter TargetName="Border" Property="Background" Value="{StaticResource HoverAccentBrush}" />
                             <Setter TargetName="Border" Property="BorderBrush" Value="{StaticResource TabHighlight}" />
                             <Setter TargetName="Border" Property="BorderThickness" Value="1,4,0,0" />
-                            <Setter TargetName="CloseButton" Property="Opacity" Value="1"/>
+                            <Setter TargetName="PART_Close" Property="IsEnabled" Value="True"/>
                         </Trigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter TargetName="Border" Property="Background" Value="{StaticResource HoverAccentBrush}" />
