--- a/ProjectX_Proto1/Themes/MasterTheme.xaml
+++ b/ProjectX_Proto1/Themes/MasterTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xmlns:local="clr-namespace:ProjectX_Proto2">
     <!-- SimpleStyles.XAML defines a set of control styles which are simplified starting points for creating your own controls -->
 
@@ -349,6 +350,76 @@
                         <Rectangle x:Name="BackgroundHover" RadiusX="0" RadiusY="0" Fill="#FF49491B" Opacity="0" />
                         <Rectangle x:Name="FocusVisualElement" RadiusX="0" RadiusY="0" Margin="1" Stroke="#FF6DBDD1" StrokeThickness="1" Opacity="0" IsHitTestVisible="false" />
                     </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type local:ScrollTabControl}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type local:ScrollTabControl}">
+                    <Grid ClipToBounds="true" SnapsToDevicePixels="true" KeyboardNavigation.TabNavigation="Local">
+                        <Grid.Resources>
+                            <sys:Double x:Key="HeaderHeight">30</sys:Double>
+                            <Thickness x:Key="DefaultButtonMargin" Left="2" Top="2" Right="2" Bottom="2" />
+                        </Grid.Resources>
+                        <Grid.RowDefinitions>
+                            <RowDefinition x:Name="RowDefinition0" Height="Auto"/>
+                            <RowDefinition x:Name="RowDefinition1" Height="*"/>
+                        </Grid.RowDefinitions>
+
+                        <Grid Canvas.ZIndex="1" Height="{StaticResource HeaderHeight}">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                                <ColumnDefinition Width="Auto"/>
+                            </Grid.ColumnDefinitions>
+                            <Border Margin="{StaticResource DefaultButtonMargin}" >
+                                <RepeatButton x:Name="TabLeftButtonTop" Style="{TemplateBinding TabLeftButtonTopStyle}" Padding="0">
+                                    <RepeatButton.Content>
+                                        <Label Opacity="1" x:Name="LeftButton" Padding="0,0,0,0" Margin="5,0,2,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF137;" Cursor="Hand"/>
+                                    </RepeatButton.Content>
+                                </RepeatButton>
+                            </Border>
+
+                            <Grid  Grid.Column="1" HorizontalAlignment="Left" >
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                </Grid.ColumnDefinitions>
+                                <ScrollViewer x:Name="TabScrollViewerTop" IsTabStop="False" VerticalScrollBarVisibility="Disabled" HorizontalScrollBarVisibility="Hidden" 
+                                                  BorderThickness="0" Padding="0,0,0,0" Margin="0,0,0,-1" >
+                                    <TabPanel x:Name="HeaderPanel" IsItemsHost="true" KeyboardNavigation.TabIndex="1" Margin="2,2,2,0" />
+                                </ScrollViewer>
+                            </Grid>
+
+                            <Border Grid.Column="2" Margin="{StaticResource DefaultButtonMargin}">
+                                <RepeatButton  x:Name="TabRightButtonTop"  Style="{TemplateBinding TabRightButtonTopStyle}" Padding="0">
+                                    <RepeatButton.Content>
+                                        <Label Opacity="1" x:Name="RightButton" Padding="0,0,0,0" Margin="2,0,5,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF138;" Cursor="Hand"/>
+                                    </RepeatButton.Content>
+                                </RepeatButton>
+                            </Border>
+                        </Grid>
+
+                        <Border x:Name="ContentPanel" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" Grid.Column="0" KeyboardNavigation.DirectionalNavigation="Contained" Grid.Row="1" KeyboardNavigation.TabIndex="2" KeyboardNavigation.TabNavigation="Local"
+                                Canvas.ZIndex="0">
+                            <ContentPresenter x:Name="PART_SelectedContentHost" ContentSource="SelectedContent" Margin="{TemplateBinding Padding}" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Width="Auto" Height="Auto"/>
+                        </Border>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="TabStripPlacement" Value="Bottom">
+                            <Setter Property="Grid.Row" TargetName="HeaderPanel" Value="1"/>
+                            <Setter Property="Grid.Row" TargetName="ContentPanel" Value="0"/>
+                            <Setter Property="Height" TargetName="RowDefinition0" Value="*"/>
+                            <Setter Property="Height" TargetName="RowDefinition1" Value="Auto"/>
+                            <Setter Property="Margin" TargetName="HeaderPanel" Value="2,0,2,2"/>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="false">
+                            <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
