--- a/ProjectX_Proto1/ProductMan.xaml
+++ b/ProjectX_Proto1/ProductMan.xaml
@@ -296,7 +296,7 @@
                 </StackPanel>
                 <DockPanel Grid.Column="2" Background="{DynamicResource WindowBackgroundBrush}">
                     <!--Right hand side content area-->
-                    <local:ScrollTabControl x:Name="tabWorkspace" HorizontalAlignment="Stretch" TabStripPlacement="Top" VerticalAlignment="Stretch" FontFamily="Segoe UI Light" FontSize="13">
+                    <local:ScrollTabControl x:Name="tabWorkspace" HorizontalAlignment="Stretch" TabStripPlacement="Top" VerticalAlignment="Stretch" FontFamily="Segoe UI Light" FontSize="13" TabLeftButtonTopStyle="{DynamicResource LeftTabScroll}" TabRightButtonTopStyle="{DynamicResource RightTabScroll}">
                         <local:DynamicTab Style="{DynamicResource LockedTabItem}" Header="Purchase History">
                             <DockPanel>
                                 <TreeView DockPanel.Dock="Left">
