--- a/ProjectX_Proto1/Themes/MasterTheme.xaml
+++ b/ProjectX_Proto1/Themes/MasterTheme.xaml
@@ -355,13 +355,58 @@
         </Setter>
     </Style>
 
+    <Style x:Key="LeftTabScroll" TargetType="RepeatButton">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Padding" Value="3"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RepeatButton">
+                    <Grid>
+                        <Label Opacity="1" x:Name="LeftButton" Padding="0,0,0,0" Margin="5,7,2,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF137;"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource TabHighlight}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>        
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="RightTabScroll" TargetType="RepeatButton">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="Padding" Value="3"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="RepeatButton">
+                    <Grid>
+                        <Label Opacity="1" x:Name="LeftButton" Padding="0,0,0,0" Margin="5,7,2,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF138;"/>
+                    </Grid>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Foreground" Value="{DynamicResource TabHighlight}"/>
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
     <Style TargetType="{x:Type local:ScrollTabControl}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ScrollTabControl}">
                     <Grid ClipToBounds="true" SnapsToDevicePixels="true" KeyboardNavigation.TabNavigation="Local">
                         <Grid.Resources>
-                            <sys:Double x:Key="HeaderHeight">30</sys:Double>
+                            <sys:Double x:Key="HeaderHeight">33</sys:Double>
                             <Thickness x:Key="DefaultButtonMargin" Left="2" Top="2" Right="2" Bottom="2" />
                         </Grid.Resources>
                         <Grid.RowDefinitions>
@@ -376,13 +421,9 @@
                                 <ColumnDefinition Width="Auto"/>
                             </Grid.ColumnDefinitions>
                             <Border Margin="{StaticResource DefaultButtonMargin}" >
-                                <RepeatButton x:Name="TabLeftButtonTop" Style="{TemplateBinding TabLeftButtonTopStyle}" Padding="0">
-                                    <RepeatButton.Content>
-                                        <Label Opacity="1" x:Name="LeftButton" Padding="0,0,0,0" Margin="5,0,2,0" Style="{DynamicResource HeaderIcons}" FontSize="16" Content="&#xF137;" Cursor="Hand"/>
-                                    </RepeatButton.Content>
+                                <RepeatButton x:Name="TabLeftButtonTop" Content="&lt;" Padding="0" Style="{TemplateBinding TabLeftButtonTopStyle}">
                                 </RepeatButton>
                             </Border>
-
                             <Grid  Grid.Column="1" HorizontalAlignment="Left" >
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*"/>
@@ -414,7 +455,7 @@
                             <Setter Property="Grid.Row" TargetName="ContentPanel" Value="0"/>
                             <Setter Property="Height" TargetName="RowDefinition0" Value="*"/>
                             <Setter Property="Height" TargetName="RowDefinition1" Value="Auto"/>
-                            <Setter Property="Margin" TargetName="HeaderPanel" Value="2,0,2,2"/>
+                            <Setter Property="Margin" TargetName="HeaderPanel" Value="2,2,2,2"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="false">
                             <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
